correct z-index of nav_menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -310,6 +310,7 @@ nav {
     flex-direction: column;
     align-items: center;
     background-color: white;
+    z-index: 1;
 }
 
 .nav__menu a.icon {
